--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,52 @@
 body {
-  background: black;
+  background: whitesmoke;
+}
+
+.form-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+form{
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+form div{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+form div:last-child{
+  width: 25%;
+}
+
+div.input{
+  text-align: right;
+}
+
+.book-list{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  margin-top: 5rem;
+}
+
+.book-list div{
+  display: flex;
+  gap: 8px;
+}
+
+.book-list div > p{
+  align-self: center;
+}
+
+.book{
+  margin-top: 1.5rem;
+  text-align: left;
 }
