--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ div.input{
   text-align: right;
 }
 
-.book-list{
+/* .book-list{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,9 +44,62 @@ div.input{
 
 .book-list div > p{
   align-self: center;
-}
+} */
 
 .book{
   margin-top: 1.5rem;
   text-align: left;
+}
+
+
+table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: 3px solid black;
+  margin-top: 2em;
+}
+
+thead th:nth-child(1) {
+  width: 30%;
+}
+
+thead th:nth-child(2) {
+  width: 20%;
+}
+
+thead th:nth-child(3) {
+  width: 15%;
+}
+
+thead th:nth-child(4) {
+  width: 35%;
+}
+
+th, td {
+  padding: 20px;
+}
+
+th {
+  letter-spacing: 2px;
+}
+
+td {
+  letter-spacing: 1px;
+}
+
+tbody td {
+  text-align: center;
+}
+
+tfoot th {
+  text-align: right;
+}
+
+thead, tfoot {
+  color: black;
+}
+
+thead th, tfoot th, tfoot td {
+  border: 3px solid black;
 }
